# tetris

./: Cargo.toml  README.md
assets/shaders/: bg.wgsl  block.wgsl
src/: consts.rs  main.rs
src/game/: end.rs  mod.rs  playing.rs  start.rs
src/render/: bg.rs  block.rs  camera.rs  constants.rs  mod.rs  text.rs
tetris-bevy/: Cargo.toml
tetris-bevy/src/: instance.rs  main.rs
tetris-wgpu/: Cargo.toml
tetris-wgpu/assets/shaders/: bg.wgsl  block.wgsl
tetris-wgpu/src/: bg.rs  game.rs  main.rs  models.rs  quad.rs  quad.wgsl  shader.wgsl
tetris-wgpu/src/game/: end.rs  mod.rs  playing.rs  start.rs
tetris-wgpu/src/render/: bg.rs  block.rs  camera.rs  constants.rs  mod.rs  text.rs
